--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Form & Tipps</title>
   </head>
   <body>
+    <form action="" method="post" class="order_form">
+      <label for="" class="address_field">
+        <input type="text" name="address" id="" class="address_input" />
+      </label>
+      <label for="" class="price_field">
+        <input type="text" name="price" id="" class="price_input" />
+      </label>
+      <label for="" class="customer_field">
+        <input type="text" name="customer" id="" class="customer_input" />
+      </label>
+      <input type="submit" value="Order" class="submit_button" />
+    </form>
+
+    <div class="buttons_container">
+      <button type="button" class="button pay_btn">Order paid</button>
+      <button type="button" class="button send_btn">Order sent</button>
+      <button type="button" class="button get_btn">Order received</button>
+    </div>
+
+    <div class="tipps_container">
+      <!-- типы генерируются динамически? -->
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
